--- a/views/create.ejs
+++ b/views/create.ejs
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
+    <!-- include libraries(jQuery, bootstrap) -->
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet"> 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script> 
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
+
+
+<!-- include summernote css/js-->
+<link href="summernote.css">
+
+
+<script src='/javascripts/main.js'></script>
+
+
+
 
 </head>
 <body>
@@ -35,16 +49,31 @@
                     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                         <button type="submit" class="btn btn-success btn-block">Add Hero</button>
                     </div>
-
                 </form>
-
+                
             </div>
+        
             
+
             <div class="panel-footer text-center">
                 <p>All rights reserved 2018 | Nate.</p>
             </div>
         </div>
     </div>
 
+    <button id="edit" class="btn btn-primary" onclick="edit()" type="button">Edit 1</button>
+       <button id="save" class="btn btn-primary" onclick="save()" type="button">Save 2</button>
+   
+        
+
+    <script src='/javascripts/main.js'></script>
+
+
 </body>
+<!-- include codemirror (codemirror.css, codemirror.js, xml.js, formatting.js) -->
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.css">
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/theme/monokai.css">
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/mode/xml/xml.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/2.36.0/formatting.js"></script>
 </html>
