--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 
     
   <script src='/javascripts/main.js'></script>
-
+  <link rel="stylesheet" href='/stylesheets/style.css'>
     <style>
         body { padding-top:15px; background-color: #ccc;}
         img { width: 100%;}
@@ -56,6 +56,27 @@
             Complex Says: Beetles have been turned into dune-racing Baja Bugs, tire-shredding drag racers, sports cars, and who the heck knows what else. What do you plan to do with yours?</p>
     </div>
   </div>
+
+  <div class="row">
+        <div class="col-sm-4">
+            <img src="https://www.popsci.com/sites/popsci.com/files/styles/1000_1x_/public/images/2018/03/senna.jpg?itok=eYNPMGjA&fc=50,50" alt="">
+          <p>McLaren Senna
+                This swoopy supercar gets its name from one of racing’s most famous drivers: Ayrton Senna, who died in 1994 after a crash at the San Marino Grand Prix. It uses a 4-liter, turbocharged V8 motor that pushes 789 horsepower. That’s a lot for a car that weighs roughly 2,700 pounds. All that power puts its acceleration on another level—its 0-60 mph time is a ridiculous 2.8 seconds. It’s a race car that crawls in just under the regulations that make it road legal.</p>
+          
+        </div>
+        <div class="col-sm-4"> 
+            <img src="https://images.complex.com/complex/image/upload/c_limit,w_680/fl_lossy,pg_1,q_auto/yv0720suiugfkroghayd.jpg" alt="">
+          <p>Years Of Production: 1999-2009
+                Potential: Race-spec
+                Complex Says: There's not much to tune on the brilliant Honda S2000. Just put in a few upgrades to make it race-worthy, and you have a really cool car.</p>
+        </div>
+        <div class="col-sm-4"> 
+            <img src="https://images.complex.com/complex/image/upload/c_limit,w_680/fl_lossy,pg_1,q_auto/qkle8wmfn7p2qevina68.jpg" alt="">
+          <p>Years Of Production: 1938-2003
+                Potential: Hilarious
+                Complex Says: Beetles have been turned into dune-racing Baja Bugs, tire-shredding drag racers, sports cars, and who the heck knows what else. What do you plan to do with yours?</p>
+        </div>
+      </div>
 </div> 
 
 </body>
