--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,7 +37,7 @@ color: #1abc9c !important;;
   background-color:rgb(146, 146, 146);
   background-size: contain;
   background-blend-mode: multiply; 
-  
+  margin-top: -90px;
   
 }
 
@@ -67,4 +67,24 @@ h2{
 
 
 /* test */
+#nav{
+  background-color: black;
+  color: white;
+  font-size: 100%;
+  margin-top:-25px;
+}
 
+.btn-primary {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  MARGIN-TOP: -53PX;
+  MARGIN-RIGHT: 180PX;
+  MARGIN-LEFT: 376PX;}
+
+  .panel-danger > .panel-heading {
+    color: #1abc9c;
+    background-color:black;
+    border-color: 5px teal;
+    margin-top: -2px;
+}
