--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href='/stylesheets/style.css'>
     <style>
         body { padding-top:15px; background-color: #ccc;}
         img { width: 100%;}
