--- a/views/view.ejs
+++ b/views/view.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>tuner car</title>
-
+    <link rel="stylesheet" href='/stylesheets/style.css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
