worked on home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,20 +40,25 @@
         <img src="https://images.complex.com/complex/image/upload/c_limit,w_680/fl_lossy,pg_1,q_auto/sqy1qe7c6pj3h1xdur4k.jpg" alt="">
       <p>Years Of Production: 1964-Present
             Potential: Shocking
-            Complex Says: People have tuned Mustangs to make more than 1,000hp. That is all.</p>
+            Complex Says: People have tuned Mustangs to make more than 1,000hp. That is all.
+            The 1979 introduction of the “Fox-body” ‘Stang and subsequent decades of development proved that this muscle car could survive in the era of electronic fuel injection and emissions regulations, while still remaining attractive to hot rodders.
+
+            That’s still the case today. It may not be your father’s Mustang, but does look (and move) like it, and a new range of turbocharged EcoBoost engines and track-focused Shelby models are increasing the ‘Stang’s appeal even more.</p>
       
     </div>
     <div class="col-sm-4"> 
         <img src="https://images.complex.com/complex/image/upload/c_limit,w_680/fl_lossy,pg_1,q_auto/yv0720suiugfkroghayd.jpg" alt="">
-      <p>Years Of Production: 1999-2009
-            Potential: Race-spec
-            Complex Says: There's not much to tune on the brilliant Honda S2000. Just put in a few upgrades to make it race-worthy, and you have a really cool car.</p>
+      <p>Honda’s S2000 was a convertible-exclusive sports car designed to celebrate the brand’s 50th anniversary. Production spanned 10 years from 1999-2009, and during that time, the car built a cult following for its precise handling, light frame, and high-revving engine (redline was 8,800 rpm for the first few model years).
+
+        Along with Mazda’s Miata, the S2000 is one of the best entry points for those looking to conquer track days. Some of the best mods for the S2000 include bigger front and rear sway bars, more aggressive brake pads, and wider wheels to accommodate beefier tires. And before you consider adding power, try lightening the car for a better power-to-weight ratio.</p>
     </div>
     <div class="col-sm-4"> 
-        <img src="https://images.complex.com/complex/image/upload/c_limit,w_680/fl_lossy,pg_1,q_auto/qkle8wmfn7p2qevina68.jpg" alt="">
-      <p>Years Of Production: 1938-2003
-            Potential: Hilarious
-            Complex Says: Beetles have been turned into dune-racing Baja Bugs, tire-shredding drag racers, sports cars, and who the heck knows what else. What do you plan to do with yours?</p>
+        <img src="http://img.digitaltrends.com/image/evo-720x720.jpg" alt="">
+      <p>In the 1990s, Mitsubishi led the pack of high-tech Japanese performance cars with models like the 3000GT, Galant VR-4, and its greatest creation, the Lancer Evolution. They’re all gone today, sadly, but the Evo in particular left a long, sideways skid mark in the automotive history books.
+
+        The Evo slowly but surely gained its reputation throughout the 1990s with World Rally Championship success, but a few PlayStation games and a 2003 U.S. debut later, and you have a bonafide performance phenomenon.
+        
+        Featuring sophisticated all-wheel drive systems and endlessly tunable turbo engines, these diamond-star warriors are still favorites among people who spend their off hours at the track.</p>
     </div>
   </div>
 
@@ -65,16 +70,15 @@
           
         </div>
         <div class="col-sm-4"> 
-            <img src="https://images.complex.com/complex/image/upload/c_limit,w_680/fl_lossy,pg_1,q_auto/yv0720suiugfkroghayd.jpg" alt="">
-          <p>Years Of Production: 1999-2009
-                Potential: Race-spec
-                Complex Says: There's not much to tune on the brilliant Honda S2000. Just put in a few upgrades to make it race-worthy, and you have a really cool car.</p>
+            <img src="https://icdn4.digitaltrends.com/image/rg-2018-volkswagen-coming-home-7-720x720.jpg" alt="">
+          <p>With the original GTI, Volkswagen invented the modern hot hatchback, but its combination of performance and practicality is as appealing today as ever.
+
+            The GTI helped launch a Euro-themed tuning subculture that’s as vibrant as any in the car world, and both the R32 and Golf R cemented its place in history. The result is a nameplate that — like most others listed here — comes with an avalanche of available aftermarket parts, as well as a massive nationwide network of enthusiasts. You can tune any generation of the Golf, from the original model made in the 1970s to the current, seventh-generation car.</p>
         </div>
         <div class="col-sm-4"> 
-            <img src="https://images.complex.com/complex/image/upload/c_limit,w_680/fl_lossy,pg_1,q_auto/qkle8wmfn7p2qevina68.jpg" alt="">
-          <p>Years Of Production: 1938-2003
-                Potential: Hilarious
-                Complex Says: Beetles have been turned into dune-racing Baja Bugs, tire-shredding drag racers, sports cars, and who the heck knows what else. What do you plan to do with yours?</p>
+            <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/subaru-impreza-wrx-sti-2006-1280-01-1548681228.jpg?crop=1xw:1xh;center,top&resize=4608:*" alt="">
+          <p>Subaru Impreza STI
+            Like all Subarus, the turbocharged boxer benefits from standard AWD, making it a terror on highways and rally circuits alike. The car was originally known for its trademark bubble headlights, though its polarizing looks became less controversial—and downright sexy—over the years. Still, let's take a break from the blue paint and bronze wheels. Okay, WRX owners?</p>
         </div>
       </div>
 </div> 
