--- a/views/create.ejs
+++ b/views/create.ejs
@@ -31,6 +31,10 @@
                          <!-- <small id=heroName" class="form-text text-muted">We'll never share your email with anyone else.</small>  -->
                     </div>
                     <div class="form-group col-xs-12 col-sm-6 col-sm-offset-3">
+                            <label for="exampleInputDescription">description</label>
+                            <input type="text" class="form-control click2edit" id="exampleInputDescription" placeholder="Link to description" name="description">
+                        </div>
+                    <div class="form-group col-xs-12 col-sm-6 col-sm-offset-3">
                         <label for="exampleInputURL">Image URL</label>
                         <input type="text" class="form-control click2edit" id="exampleInputURL" placeholder="Link to car" name="image_url">
                     </div> 
