--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
     <title>Hero App</title>
 
     <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
+
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -21,6 +25,7 @@
         img { width: 100%;}
         
     </style>
+ 
  <% include partials/head %> 
 </head>
 <body>
@@ -82,6 +87,57 @@
         </div>
       </div>
 </div> 
+
+
+<!-- footer -->
+<footer class="flex-rw">
+  
+  <ul class="footer-list-top">
+    <li>
+      <h4 class="footer-list-header">About Car tuner</h4></li>
+    <li><a href='' class="generic-anchor footer-list-anchor" itemprop="significantLink">GET TO KNOW US</a></li>
+    <li><a href='' class="generic-anchor footer-list-anchor" itemprop="significantLink">PROMOS</a></li>
+    <li><a href='' class="generic-anchor footer-list-anchor" itemprop="significantLink">BECOME A BLOGER</a></li>
+    <li><a href='' class="generic-anchor footer-list-anchor" itemprop="significantLink">EVENTS</a></li>
+  </ul>
+  <ul class="footer-list-top">
+    <li>
+      <h4 class="footer-list-header">The Gift Selection</h4></li>
+
+
+    <li><a href='' class="generic-anchor footer-list-anchor">CAR ACCESSORIES</a></li>
+    <li><a href='' class="generic-anchor footer-list-anchor">SOUND SYSTEMS</a></li>
+    <li><a href='' class="generic-anchor footer-list-anchor">MAGS AND RACING WHEELS</a></li>
+  </ul>
+  <ul class="footer-list-top">
+    <li id='help'>
+      <h4 class="footer-list-header">Please Help Me</h4></li>
+    <li><a href='' class="generic-anchor footer-list-anchor" itemprop="significantLink">CONTACT</a></li>
+    <li><a href='/faq.html' class="generic-anchor footer-list-anchor" itemprop="significantLink">FAQ</a></li>
+    <li id='user-registration'><a href='' class="generic-anchor footer-list-anchor" itemprop="significantLink">NEW USERS</a></li>
+    <li id='order-tracking'><a href='' itemprop="significantLink" class="generic-anchor footer-list-anchor">ORDER STATUS</a></li>
+  </ul>
+  <section class="footer-social-section flex-rw">
+      <span class="footer-social-overlap footer-social-connect">
+      CONNECT <span class="footer-social-small">with</span> US
+      </span>
+      <span class="footer-social-overlap footer-social-icons-wrapper">
+      <a href="" class="generic-anchor" target="_blank" title="Facebook" itemprop="significantLink"><i class="fab fa-facebook"></i></a>
+      <a href="" class="generic-anchor" target="_blank" title="Twitter" itemprop="significantLink"><i class="fab fa-twitter"></i></a>
+      <a href="" class="generic-anchor" target="_blank" title="Instagram" itemprop="significantLink"><i class="fab fa-instagram"></i></a>
+      <a href="" class="generic-anchor" target="_blank" title="Youtube" itemprop="significantLink"><i class="fab fa-youtube"></i></a>
+      <a href="" class="generic-anchor" target="_blank" title="Google Plus" itemprop="significantLink"><i class="fab fa-google-plus"></i></a>
+      </span>
+  </section>
+  <section class="footer-bottom-section flex-rw">
+<div class="footer-bottom-wrapper">   
+<i class="fa fa-copyright" role="copyright">
+ 
+</i> 2019 Tuner Car Blog <address class="footer-address" role="company address">OTTERY, CPT</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
+    </div>
+  </section>
+</footer>
+
 
 </body>
 <% include partials/script %>
