worked on NAV BAR

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -43,10 +43,10 @@
                         <label for="exampleInputURL">Image URL</label>
                         <input type="text" class="form-control click2edit" id="exampleInputURL" placeholder="Link to car" name="image_url">
                     </div> 
-                     <!-- <div class="form-group col-xs-12 col-sm-6 col-sm-offset-3">
+                     <div class="form-group col-xs-12 col-sm-6 col-sm-offset-3">
                             <label for="exampleInputDescription">description</label>
                             <input type="text" class="form-control click2edit" id="exampleInputDescription" placeholder="Link to description" name="description">
-                        </div> -->
+                        </div>
                     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                         <button type="submit" class="btn btn-success btn-block">ADD a POST</button>
                     </div>
@@ -117,7 +117,7 @@
   <div class="footer-bottom-wrapper">   
   <i class="fa fa-copyright" role="copyright">
    
-  </i> 2019 Tuner Car Blog <address class="footer-address" role="company address">OTTERY, CPT</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
+  </i> 2019 Tuner Car Blog <address class="footer-address" role="company address">OTTERY, CPT</address><span class="footer-bottom-rights"> - All Rights Reserved - Ishmail</span>
       </div>
     </section>
   </footer>
