--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -11,8 +11,8 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
               <li id="home"><a href="/">HOME</a></li>
-              <li id="create"><a href="/create">create</a></li>
-              <li id="archive"><a href="/archive">archive</a></li>
+              <li id="create"><a href="/create">CREATE</a></li>
+              <li id="archive"><a href="/archive">ARCHIVE</a></li>
              
             </ul>
           </div>
