--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,7 +133,7 @@
 <div class="footer-bottom-wrapper">   
 <i class="fa fa-copyright" role="copyright">
  
-</i> 2019 Tuner Car Blog <address class="footer-address" role="company address">OTTERY, CPT</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
+</i> 2019 Tuner Car Blog <address class="footer-address" role="company address">OTTERY, CPT</address><span class="footer-bottom-rights"> - All Rights Reserved - Ishmail</span>
     </div>
   </section>
 </footer>
