--- a/views/view.ejs
+++ b/views/view.ejs
@@ -39,9 +39,6 @@
                 </div>  
 
             </div>
-            <div class="panel-footer text-center">
-                <p>All rights reserved 2018 | Nate.</p>
-            </div>
         </div>
     </div>
 
@@ -90,7 +87,7 @@
   <div class="footer-bottom-wrapper">   
   <i class="fa fa-copyright" role="copyright">
    
-  </i> 2019 Tuner Car Blog <address class="footer-address" role="company address">OTTERY, CPT</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
+  </i> 2019 Tuner Car Blog <address class="footer-address" role="company address">OTTERY, CPT</address><span class="footer-bottom-rights"> - All Rights Reserved - Ishmail</span>
       </div>
     </section>
   </footer>
